# scrt-cli

./: .gitignore  COMPAT.md  Cargo.toml  DESIGN.md  INSTALL.md  LICENSE  MIGRATION.md  README.md  RELEASING.md
.claude/: settings.json
.claude/hooks/: allow-scrt.mjs
.github/workflows/: ci.yml  release.yml
.palacegen/: palace.json
crates/scrt-cli/: Cargo.toml
crates/scrt-cli/src/: args.rs  evolve_cli.rs  main.rs  palace_cli.rs
crates/scrt-core/: Cargo.toml
crates/scrt-core/src/: AGENTS.md  envelope.rs  format.rs  fuzzy.rs  lib.rs  nodes.rs  orchestrator.rs  pagination.rs  search.rs  sources.rs  tokens.rs  tool_spec.rs  types.rs
crates/scrt-core/src/palace/: mod.rs  ops.rs  prune.rs  relations.rs  simhash.rs  staleness.rs  types.rs
crates/scrt-core/tests/: gen_goldens.mjs  palace_migration.rs  palace_ops.rs  roundtrip.rs  tool_spec_parity.rs
crates/scrt-core/tests/corpus/: basic.txt  code.txt  fuzz.txt  multi.txt
crates/scrt-core/tests/golden/: basic.agentjson-fill.json  basic.curve-linear.json  basic.deep.json  basic.fuzzy-agentjson.json  basic.fuzzy-scan.json  basic.maxnodes2.json  basic.maxtokens10.json  basic.quick.json  basic.scan-clip20.json  basic.scan-clip3.json  basic.scan.json  basic.strategy-deep.json  basic.word.json  code.agentjson-fill.json  code.agentjson-nofill.json  code.curve-log.json  code.deep.json  code.fuzzy-agentjson.json  code.fuzzy-scan.json  code.maxnodes2.json  code.maxtokens10.json  code.quick.json  code.scan-clip20.json  code.scan-clip3.json  code.scan.json  code.strategy-deep.json  code.word.json  fuzz.agentjson-fill.json  fuzz.agentjson-nomatch.json  fuzz.agentjson-ok.json  fuzz.curve-log.json  fuzz.deep.json  fuzz.fuzzy-agentjson.json  fuzz.fuzzy-scan.json  fuzz.maxnodes2.json  fuzz.maxtokens10.json  fuzz.normal.json  fuzz.quick.json  fuzz.scan-clip20.json  fuzz.scan-clip3.json  (+14 more)
crates/scrt-core/tests/palace_fixtures/: node-palace.json
crates/scrt-evolve/: Cargo.toml
crates/scrt-evolve/src/: config.rs  corpus.rs  lib.rs  train.rs
crates/scrt-napi/: Cargo.toml  build.rs
crates/scrt-napi/src/: lib.rs
crates/scrt-py/: Cargo.toml  pyproject.toml
crates/scrt-py/src/: lib.rs
crates/scrt-server/: Cargo.toml
crates/scrt-server/src/: dispatcher.rs  http.rs  lib.rs  stdio.rs
crates/scrt-server/tests/: dispatch.rs
skills/scrt-context/: SKILL.md
