[package]
name = "scrt-napi"
description = "scrt Node addon: the engine dispatcher exposed in-process via napi-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
scrt-core = { path = "../scrt-core", features = ["url-source"] }
scrt-server = { path = "../scrt-server" }
serde.workspace = true
serde_json.workspace = true
# napi-rs: wired in Prompt 5. Pinned here so the workspace resolves the
# version now; the lib is a placeholder until then.
napi = { version = "2", features = ["napi8", "serde-json"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
