[package]
name = "scrt-py"
description = "scrt Python bindings via PyO3 — in-process engine for Python harnesses"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "scrt_py"
crate-type = ["cdylib"]

[dependencies]
scrt-core = { path = "../scrt-core", features = ["url-source"] }
scrt-server = { path = "../scrt-server" }
serde_json.workspace = true
# PyO3: in-process dispatch for the LongMemEval harness (Prompt 7 promotes
# this from the v1 stub — DESIGN.md §3 non-goals updated). abi3-py39 builds
# against the stable ABI so one artifact works across Python 3.9+ (and is
# forward-compatible with the local 3.14, which is newer than PyO3's pinned
# max — see PYO3_USE_ABI3_FORWARD_COMPATIBILITY).
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
